fix letter-spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@
   .name {
       font-size: 56px;
       font-family: IBM Plex Bold;
+      letter-spacing:0.5px;
 }
 
     
